--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@remix-run/eslint-config": "^2.0.0-pre.8",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6"
   },
   "engines": {
